# mecheye_cpp_samples

./: CMakeLists.txt  LICENSE  README.md
area_scan_3d_camera/: CMakeLists.txt  README.md
area_scan_3d_camera/Advanced/CapturePeriodically/: CapturePeriodically.cpp  README.md
area_scan_3d_camera/Advanced/CaptureStereo2DImages/: CaptureStereo2DImages.cpp  README.md
area_scan_3d_camera/Advanced/ConvertDepthMapToPointCloud/: ConvertDepthMapToPointCloud.cpp  README.md
area_scan_3d_camera/Advanced/Mapping2DImageToDepthMap/: Mapping2DImageToDepthMap.cpp  README.md
area_scan_3d_camera/Advanced/MultipleCamerasCaptureSequentially/: MultipleCamerasCaptureSequentially.cpp  README.md
area_scan_3d_camera/Advanced/MultipleCamerasCaptureSimultaneously/: MultipleCamerasCaptureSimultaneously.cpp  README.md
area_scan_3d_camera/Advanced/RegisterCameraEvent/: README.md  RegisterCameraEvent.cpp
area_scan_3d_camera/Advanced/RenderDepthMap/: CMakeLists.txt  README.md  RenderDepthMap.cpp
area_scan_3d_camera/Advanced/SetParametersOfLaserCameras/: README.md  SetParametersOfLaserCameras.cpp
area_scan_3d_camera/Advanced/SetParametersOfUHPCameras/: README.md  SetParametersOfUHPCameras.cpp
area_scan_3d_camera/Advanced/TransformPointCloud/: CMakeLists.txt  README.md  TransformPointCloud.cpp
area_scan_3d_camera/Advanced/WarmUp/: CMakeLists.txt  README.md  WarmUp.cpp
area_scan_3d_camera/Basic/Capture2DImage/: Capture2DImage.cpp  README.md
area_scan_3d_camera/Basic/CaptureDepthMap/: CaptureDepthMap.cpp  README.md
area_scan_3d_camera/Basic/CapturePointCloud/: CapturePointCloud.cpp  README.md
area_scan_3d_camera/Basic/CapturePointCloudHDR/: CapturePointCloudHDR.cpp  README.md
area_scan_3d_camera/Basic/CapturePointCloudWithNormals/: CapturePointCloudWithNormals.cpp  README.md
area_scan_3d_camera/Basic/ConnectAndCaptureImages/: ConnectAndCaptureImages.cpp  README.md
area_scan_3d_camera/Basic/ConnectToCamera/: ConnectToCamera.cpp  README.md
area_scan_3d_camera/Basic/SaveVirtualDevice/: CMakeLists.txt  README.md  SaveVirtualDevice.cpp
area_scan_3d_camera/Calibration/HandEyeCalibration/: HandEyeCalibration.cpp  HandEyeCalibrationUtil.h  README.md
area_scan_3d_camera/Halcon/ConvertPointCloudToObjectModel3D/: ConvertPointCloudToObjectModel3D.cpp  README.md
area_scan_3d_camera/Pcl/ConvertPointCloudToPcl/: ConvertPointCloudToPcl.cpp  README.md
area_scan_3d_camera/Pcl/ConvertPointCloudWithNormalsToPcl/: ConvertPointCloudWithNormalsToPcl.cpp  README.md
area_scan_3d_camera/Util/GetCameraIntrinsics/: GetCameraIntrinsics.cpp  README.md
area_scan_3d_camera/Util/ManageUserSets/: ManageUserSets.cpp  README.md
area_scan_3d_camera/Util/PrintCameraInfo/: PrintCameraInfo.cpp  README.md
area_scan_3d_camera/Util/SaveAndLoadUserSet/: README.md  SaveAndLoadUserSet.cpp
area_scan_3d_camera/Util/SetDepthRange/: README.md  SetDepthRange.cpp
area_scan_3d_camera/Util/SetPointCloudProcessingParameters/: README.md  SetPointCloudProcessingParameters.cpp
area_scan_3d_camera/Util/SetScanningParameters/: README.md  SetScanningParameters.cpp
profiler/: CMakeLists.txt  README.md
profiler/AcquirePointCloud/: AcquirePointCloud.cpp  CMakeLists.txt  README.md
profiler/AcquireProfileData/: AcquireProfileData.cpp  README.md
profiler/AcquireProfileDataUsingCallback/: AcquireProfileDataUsingCallback.cpp  CMakeLists.txt  README.md
profiler/Advanced/BlindSpotFiltering/: BlindSpotFiltering.cpp  CMakeLists.txt  README.md
profiler/Advanced/NoiseRemoval/: CMakeLists.txt  NoiseRemoval.cpp  README.md
profiler/Advanced/ProfileAlignment/: ProfileAlignment.cpp  README.md
profiler/Advanced/RegisterProfilerEvent/: README.md  RegisterProfilerEvent.cpp
profiler/Advanced/UseVirtualDevice/: README.md  UseVirtualDevice.cpp
profiler/Advanced/WarmUp/: CMakeLists.txt  README.md  WarmUp.cpp
profiler/Basic/TriggerNonStopAcquisition/: CMakeLists.txt  README.md  TriggerNonStopAcquisition.cpp
profiler/Basic/TriggerWithExternalDeviceAndEncoder/: TriggerWithExternalDeviceAndEncoder.cpp
profiler/Basic/TriggerWithExternalDeviceAndFixedRate/: README.md  TriggerWithExternalDeviceAndFixedRate.cpp
profiler/Basic/TriggerWithSoftwareAndFixedRate/: README.md  TriggerWithSoftwareAndFixedRate.cpp
profiler/BlindSpotFiltering/: BlindSpotFiltering.cpp
profiler/Calibration/MultipleProfilersCalibration/: CMakeLists.txt  MultipleProfilersCalibration.cpp  README.md  (+2 more)
profiler/ManageUserSets/: ManageUserSets.cpp  README.md
profiler/MultipleProfilersCalibration/: MultipleProfilersCalibration.cpp  MultipleProfilersCalibrationUtil.cpp  MultipleProfilersCalibrationUtil.h
profiler/NoiseRemoval/: NoiseRemoval.cpp
profiler/PrintProfilerStatus/: CMakeLists.txt  PrintProfilerStatus.cpp  README.md
profiler/ProfileAlignment/: CMakeLists.txt  ProfileAlignment.cpp
profiler/RegisterProfilerEvent/: README.md  RegisterProfilerEvent.cpp
profiler/RenderDepthMap/: RenderDepthMap.cpp
profiler/TransformPointCloud/: CMakeLists.txt  README.md  TransformPointCloud.cpp
profiler/TriggerMultipleProfilersSimultaneously/: README.md  TriggerMultipleProfilersSimultaneously.cpp
profiler/TriggerNonStopAcquisition/: TriggerNonStopAcquisition.cpp
profiler/TriggerWithExternalDeviceAndEncoder/: README.md  TriggerWithExternalDeviceAndEncoder.cpp
profiler/TriggerWithExternalDeviceAndFixedRate/: README.md  TriggerWithExternalDeviceAndFixedRate.cpp
profiler/TriggerWithSoftwareAndEncoder/: README.md  TriggerWithSoftwareAndEncoder.cpp
profiler/TriggerWithSoftwareAndFixedRate/: README.md  TriggerWithSoftwareAndFixedRate.cpp
profiler/UseVirtualDevice/: README.md  UseVirtualDevice.cpp
source/: CMakeLists.txt  README.md
source/captureCloudFromDepth/: CMakeLists.txt  ReadMe.txt  captureCloudFromDepth.cpp
source/captureResultToOpenCV/: CMakeLists.txt  ReadMe.txt  captureResultToOpenCV.cpp
source/captureResultToPLY/: CMakeLists.txt  ReadMe.txt  captureResultToPLY.cpp
source/connectAndCaptureImage/: CMakeLists.txt  ReadMe.txt  connectAndCaptureImage.cpp
source/setAndGetParameter/: CMakeLists.txt  ReadMe.txt  setAndGetParameter.cpp
(+153 files in other folders)
